# dart_discord_rpc

./: .gitignore  .gitmodules  CHANGELOG.md  COPYRIGHT  LICENSE  README.md  pubspec.yaml
cxx/: .gitignore  CMakeLists.txt  dart_discord_rpc.cpp  events.hpp
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  flutter_window.h  main.cpp
ffi/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
ffi/example/: dart_discord_rpc_ffi_example.dart
ffi/headers/: discord_rpc.h
ffi/lib/: dart_discord_rpc_ffi.dart
ffi/lib/src/: ffi.dart  typedefs.dart
ffi/lib/src/models/: discord_event.dart  discord_user.dart
headers/: discord_register.h
lib/: dart_discord_rpc.dart  dart_discord_rpc_native.dart  dart_discord_rpc_stub.dart
lib/model/: discord_presence.dart
linux/: CMakeLists.txt  dart_discord_rpc_plugin.cc
linux/include/dart_discord_rpc/: dart_discord_rpc_plugin.h
macos/: dart_discord_rpc.podspec
macos/Classes/: DartDiscordRpcPlugin.swift
windows/: CMakeLists.txt  dart_discord_rpc_plugin.cpp
windows/include/dart_discord_rpc/: dart_discord_rpc_plugin.h
